"Bringing my creation to life, much like Victor Frankenstein's monster by Mary Shelley. Finalizing the layout – almost there! 💡 #Progress #CreationInProgress"

--- a/SchoolProject.Web/Views/Shared/LayoutFooter/_LayoutFooterComplete.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutFooter/_LayoutFooterComplete.cshtml
@@ -12,16 +12,19 @@
 
             <a class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none" href="/">
                 <svg class="bi me-2" height="32" width="40">
-                    <use xlink:href="#bootstrap"/>
+                    <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#house-gear"/>
                 </svg>
             </a>
 
             <p class="text-body-secondary">&copy; 2023</p>
 
-            <p class="col-md-4 mb-0 text-body-secondary">
-                <span id="htmlWidth-navbar"></span>
-                <span id="htmlHeight-navbar"></span>
-                <span id="htmlWidthHeight-navbar"></span>
+            <p class="col-md-4 mb-0 text-body-secondary  my-custom-footer-html">
+                <!-- Será atualizado com a largura do HTML -->
+                <span class="html-width"></span>
+                <!-- Será atualizado com a altura do HTML -->
+                <span class="html-height"></span>
+                <!-- Será atualizado com a largura e altura do HTML -->
+                <span class="html-width-height"></span>
             </p>
 
         </div>
