--- a/SchoolProject.Web/Views/Shared/LayoutFooter/_LayoutFooterNewsletter.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutFooter/_LayoutFooterNewsletter.cshtml
@@ -137,21 +137,21 @@
                 <li class="ms-3">
                     <a class="link-body-emphasis" href="#">
                         <svg class="bi" height="24" width="24">
-                            <use xlink:href="#twitter"/>
+                            <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#twitter"/>
                         </svg>
                     </a>
                 </li>
                 <li class="ms-3">
                     <a class="link-body-emphasis" href="#">
                         <svg class="bi" height="24" width="24">
-                            <use xlink:href="#instagram"/>
+                            <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#instagram"/>
                         </svg>
                     </a>
                 </li>
                 <li class="ms-3">
                     <a class="link-body-emphasis" href="#">
                         <svg class="bi" height="24" width="24">
-                            <use xlink:href="#facebook"/>
+                            <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#facebook"/>
                         </svg>
                     </a>
                 </li>
