--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
@@ -253,15 +253,18 @@
             </div>
         }
 
-        <div class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
-            <div class="vr d-none d-lg-flex h-100 mx-lg-2 "></div>
-            <hr class="d-lg-none my-2 ">
-        </div>
+        <div class="b-example-divider d-none">dark mode switch panel section</div>
+        <div class="b-example-divider dark-mode-switch-panel-section">
+            <div class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
+                <div class="vr d-none d-lg-flex h-100 mx-lg-2 "></div>
+                <hr class="d-lg-none my-2 ">
+            </div>
 
-        <div class="form-check form-switch me-2">
-            <div class="d-flex flex-column">
-                <input class="form-check-input order-1 align-self-center" type="checkbox" id="darkModeSwitch">
-                <label class="form-check-label order-2 align-self-center text-wrap" for="darkModeSwitch">Dark Mode</label>
+            <div class="form-check form-switch me-2">
+                <div class="d-flex flex-column">
+                    <input class="form-check-input order-1 align-self-center" type="checkbox" id="darkModeSwitch">
+                    <label class="form-check-label order-2 align-self-center text-wrap" for="darkModeSwitch">Dark Mode</label>
+                </div>
             </div>
         </div>
 
