--- a/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
@@ -10,7 +10,7 @@
 
 
 <div class="b-example-divider d-none">Layout Footer Main</div>
-@* <partial name="LayoutFooter/_LayoutFooterMain"/> *@
+<partial name="LayoutFooter/_LayoutFooterMain"/>
 
 
 <div class="b-example-divider d-none">Layout Footer Minimal</div>
@@ -22,12 +22,15 @@
 
 
 <div class="b-example-divider d-none">Layout Footer Complete</div>
-@* <partial name="LayoutFooter/_LayoutFooterComplete"/> *@
+<partial name="LayoutFooter/_LayoutFooterComplete"/>
 
 
 <div class="b-example-divider d-none">Layout Footer with Newsletter</div>
-@* <partial name="LayoutFooter/_LayoutFooterNewsletter"/> *@
+<partial name="LayoutFooter/_LayoutFooterNewsletter"/>
 
 
-<div class="b-example-divider d-none">Layout Footer javascript</div>
-<script src="~/js/siteFooter.js"></script>
+<div class="b-example-divider d-none">Layout Footer javascript 0</div>
+@* <script src="~/js/siteFooter.js"></script> *@
+
+<div class="b-example-divider d-none">Layout Footer javascript 1</div>
+<script src="~/js/siteFooter1.js"></script>
