--- a/SchoolProject.Web/Views/Shared/LayoutFooter/_LayoutFooterMinimal.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutFooter/_LayoutFooterMinimal.cshtml
@@ -1,61 +1,64 @@
 ﻿@* --------------------------------------------------- *@
-@* Rodapé para testes número 2                         *@
+@* Rodapé para testes número 3                         *@
 @* --------------------------------------------------- *@
 
-@* _LayoutFooterMinimal *@
+@* _LayoutFooterSimple *@
+
 
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
 
-        @* <p class="col-md-4 mb-0 text-body-secondary">&copy; 2023 Company, Inc</p> *@
+        <div class="nav col-md-4 d-flex align-items-center">
+            <a class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" href="/">
+                <svg class="bi" fill="currentColor" height="24" width="30">
+                    <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#house-gear"/>
+                </svg>
+            </a>
 
-        <p class="col-md-4 mb-0 text-body-secondary">
-            &copy; 2017 – @DateTime.Today.Year Company, Inc. | @DateTime.Now | @ViewData["AssemblyName"]
-            &copy; - Version: @ViewData["AssemblyVersion"] | @ViewData["AssemblyFileVersion"]
-        </p>
+            <span class="mb-3 mb-md-0 text-body-secondary">
+                &copy; 2023 @ViewData["AssemblyName"] -
+                Version: @ViewData["AssemblyVersion"]
+                @* | @ViewData["AssemblyFileVersion"] *@
+            </span>
 
-        <a class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <span class="mb-3 mb-md-0 text-body-secondary">
+                &copy; 2017 – @DateTime.Today.Year | @DateTime.Now
+            </span>
 
-            <p>
-                <span id="htmlWidth-navbar"></span>
-                <span id="htmlHeight-navbar"></span>
-                <span id="htmlWidthHeight-navbar"></span>
-            </p>
+        </div>
 
-            <svg class="bi me-2" height="32" width="40">
-                <use xlink:href="#bootstrap"/>
-            </svg>
-        </a>
+        <ul class="nav col-md-4 justify-content-end list-unstyled  d-block  my-custom-footer-html">
+            <li class="ms-3 ">
+                <span class="html-width"></span>
+            </li>
+            <li class="ms-3 ">
+                <span class="html-height"></span>
+            </li>
+            <li class="ms-3 ">
+                <span class="html-width-height"></span>
+            </li>
+        </ul>
 
-        <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link px-2 text-body-secondary"
-                   asp-area="" asp-controller="Home" asp-action="Index">
-                    Home
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3">
+                <a class="text-body-secondary" href="#">
+                    <svg class="bi" fill="currentColor" height="24" width="24">
+                        <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#twitter"/>
+                    </svg>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link px-2 text-body-secondary"
-                   asp-area="" asp-controller="Home" asp-action="Features">
-                    Features
+            <li class="ms-3">
+                <a class="text-body-secondary" href="#">
+                    <svg class="bi" fill="currentColor" height="24" width="24">
+                        <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#instagram"/>
+                    </svg>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link px-2 text-body-secondary"
-                   asp-area="" asp-controller="Home" asp-action="Pricing">
-                    Pricing
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link px-2 text-body-secondary"
-                   asp-area="" asp-controller="Home" asp-action="FAQs">
-                    FAQs
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link px-2 text-body-secondary"
-                   asp-area="" asp-controller="Home" asp-action="About">
-                    About
+            <li class="ms-3">
+                <a class="text-body-secondary" href="#">
+                    <svg class="bi" fill="currentColor" height="24" width="24">
+                        <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#facebook"/>
+                    </svg>
                 </a>
             </li>
         </ul>
