more done, and much more to go

--- a/SchoolProject.Web/Views/Home/Index.cshtml
+++ b/SchoolProject.Web/Views/Home/Index.cshtml
@@ -50,6 +50,7 @@
     <div class="flex-grow-1">
         <h1 class="display-4">Welcome to the School Management Information System</h1>
         <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <img src="~/images/cover/school-Project-Cover-1.png" alt="School Management Cover 1">
+        <img alt="School Management Cover 1" class="image-cover"
+             src="~/images/cover/school-Project-Cover-1.png" style="max-width: 100%; height: auto;">
     </div>
 </div>
