--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarMain.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarMain.cshtml
@@ -84,8 +84,10 @@
 
         <div class="b-example-divider d-none">login panel section</div>
         <div class="b-example-divider login-panel-section">
-            <partial name="_LayoutNavBarLoginPanel"/>
+            <partial name="_LayoutNavBarLoginDarkModePanel"/>
         </div>
+
+
 
     </div>
 
