--- a/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
@@ -32,5 +32,5 @@
 <div class="b-example-divider d-none">Layout Footer javascript 0</div>
 @* <script src="~/js/siteFooter.js"></script> *@
 
-<div class="b-example-divider d-none">Layout Footer javascript 1</div>
-<script src="~/js/siteFooter1.js"></script>
+<div class="b-example-divider d-none">Layout Footer javascript</div>
+<script src="~/js/siteFooter.js"></script>
