--- a/SchoolProject.Web/Views/Shared/_LayoutHeadImports.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutHeadImports.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="b-example-divider d-none">DataTables</div>
+﻿@* <div class="b-example-divider d-none">DataTables</div> *@
 <!-- DataTables -->
 @* https://datatables.net/download/ *@
 
@@ -13,7 +13,7 @@
     </script>
 
 
-<div class="b-example-divider d-none">Bootstrap core CSS</div>
+@* <div class="b-example-divider d-none">Bootstrap core CSS</div> *@
 <!-- Bootstrap core CSS -->
 @* <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.min.js" *@
 @*         integrity="sha512-3dZ9wIrMMij8rOH7X3kLfXAzwtcHpuYpEgQg1OA4QAob1e81H8ntUQmQm3pBudqIoySO5j0tHN4ENzA6+n2r4w==" *@
@@ -25,7 +25,7 @@
 @*         crossorigin="anonymous" referrerpolicy="no-referrer"></script> *@
 
 
-<div class="b-example-divider d-none">Bootstrap icons CSS</div>
+@* <div class="b-example-divider d-none">Bootstrap icons CSS</div> *@
 <!-- Bootstrap icons CSS -->
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
@@ -33,7 +33,7 @@
       crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 
-<div class="b-example-divider d-none">Font Awesome</div>
+@* <div class="b-example-divider d-none">Font Awesome</div> *@
 <!-- Font Awesome -->
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -41,7 +41,7 @@
       crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 
-<div class="b-example-divider d-none">Font Awesome Icon Picker</div>
+@* <div class="b-example-divider d-none">Font Awesome Icon Picker</div> *@
 <!-- Font Awesome Icon Picker -->
 <!-- Font Awesome Icon Picker plug-in for Twitter Bootstrap -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fontawesome-iconpicker/3.2.0/js/fontawesome-iconpicker.min.js"
@@ -50,29 +50,29 @@
 </script>
 
 
-<div class="b-example-divider d-none">MDB</div>
-<!-- MDB -->
+@* <div class="b-example-divider d-none">MDB</div> *@
+@* <!-- MDB --> *@
 @* <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/> *@
 @* <link href="~/lib/mdb/css/mdb.min.css" rel="stylesheet"/> *@
 
 
-<div class="b-example-divider d-none">Google Fonts</div>
+@* <div class="b-example-divider d-none">Google Fonts</div> *@
 <!-- Google Fonts Roboto -->
 <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
 
-<div class="b-example-divider d-none">Google Fonts Roboto</div>
+@* <div class="b-example-divider d-none">Google Fonts Roboto</div> *@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"/>
 
-<div class="b-example-divider d-none">Google Fonts Noto Sans</div>
+@* <div class="b-example-divider d-none">Google Fonts Noto Sans</div> *@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-<div class="b-example-divider d-none">Google Fonts Crimson Pro</div>
+@* <div class="b-example-divider d-none">Google Fonts Crimson Pro</div> *@
 @* <style> body { font-family: 'Noto Sans', sans-serif, 'Crimson Pro', serif; font-size: 20px; } </style> *@
 <style> body { font-family: 'Noto Sans', sans-serif, 'Crimson Pro', serif; } </style>
 
 
-<div class="b-example-divider d-none">Google Fonts Material Icons</div>
+@* <div class="b-example-divider d-none">Google Fonts Material Icons</div> *@
 <!-- Google Fonts Material Icons -->
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
       rel="stylesheet"/>
@@ -84,7 +84,6 @@
       rel="stylesheet">
 
 
-
-<div class="b-example-divider d-none">Custom styles</div>
+@* <div class="b-example-divider d-none">Custom styles</div> *@
 <!-- Custom styles -->
-<link asp-append-version="true" href="~/css/site.css" rel="stylesheet"/>
+<link asp-append-version="true" charset="utf-8" href="~/css/site.css" rel="stylesheet" type="text/css" />
