--- a/SchoolProject.Web/Views/Shared/_LayoutScripts.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutScripts.cshtml
@@ -1,11 +1,11 @@
 ﻿<!-- Adicione a referência ao script -->
 
 
-<script src="~/js/color-modes.js" asp-append-version="true"></script>
-<script src="~/js/darkModeSwitch.js" asp-append-version="true"></script>
-<script src="~/js/dataTablesInitialization.js" asp-append-version="true"></script>
-<script src="~/js/datePickerInitialization.js" asp-append-version="true"></script>
-<script src="~/js/imagePreview.js" asp-append-version="true"></script>
+<script asp-append-version="true" charset="utf-8" src="~/js/color-modes.js" type="text/javascript"></script>
+<script asp-append-version="true" charset="utf-8" src="~/js/darkModeSwitch.js" type="text/javascript"></script>
+<script asp-append-version="true" charset="utf-8" src="~/js/dataTablesInitialization.js" type="text/javascript"></script>
+<script asp-append-version="true" charset="utf-8" src="~/js/datePickerInitialization.js" type="text/javascript"></script>
+<script asp-append-version="true" charset="utf-8" src="~/js/imagePreview.js" type="text/javascript"></script>
 
 
-<script src="~/js/site.js" asp-append-version="true"></script>
+<script asp-append-version="true" charset="utf-8" src="~/js/site.js" type="text/javascript"></script>
