--- a/SchoolProject.Web/wwwroot/css/ProductNotFound.css
+++ b/SchoolProject.Web/wwwroot/css/ProductNotFound.css
@@ -1,3 +1,5 @@
+/* Content-Type: text/css; charset=utf-8 */
+
 @import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Fira+Mono:wght@500&display=swap");
 
 
