--- a/SchoolProject.Web/wwwroot/css/Error404.css
+++ b/SchoolProject.Web/wwwroot/css/Error404.css
@@ -1,3 +1,5 @@
+/* Content-Type: text/css; charset=utf-8 */
+
 .error-container {
     /*background: #95b3bb;*/
     font-family: "Exo 2", sans-serif;
